--- a/typ/static/src/scss/variables.scss
+++ b/typ/static/src/scss/variables.scss
@@ -1,2 +1,3 @@
 $typ-cobalt: #194b96;
 $typ-greyish-brown: #505050;
+$typ-nav-tabs-border-width: 2px;
